# RedBean

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  imgui.ini
RedBean/src/: CMakeLists.txt  RedBean.h
RedBean/src/core/: Application.cpp  Application.h  Core.h  EntryPoints.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseCodes.h  Window.h
RedBean/src/function/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
RedBean/src/function/editor/: ImGuiLayer.cpp  ImGuiLayer.h
RedBean/src/platform/macos/: MacWindow.cpp  MacWindow.h
RedBean/src/platform/opengl/: ImGuiOpenGLRenderer.cpp
Sandbox/src/: CMakeLists.txt  SandboxApp.cpp
